# PP-flask

./: README.md  alembic.ini  app.py  pyproject.toml  requirements.txt  schemas.py  test_app.py
.github/workflows/: web_online-pharmacy.yml
alembic/: README  env.py
alembic/versions/: 1c916577051b_create_tables.py  361bf05784ef_create_tables_try5.py  5a5a52b91085_create_tables_try3.py  6ebac0b58034_create_tables_try6.py  71c750a7c4eb_create_tables.py  976f94312c0c_1.py  a035c78f775b_create_tables_try2.py  ad4c29df5369_create_tables_try5.py  b78d11a4b560_create_tables_try4.py  d408bafbec0d_web.py  d77f7935789a_web.py  da5f156c896f_web.py  e3e41777fdfc_create_tables_try3.py  ec86ea7afa44_1.py  f77d672e44ad_web.py
db/alembic_orm/: add.py  fill.py
db/raw_sql/: create.sql
documentation/: api.yaml
tests/flask_app/: run.py
