[tool.poetry]
name = "pp-flask"
version = "0.1.0"
description = ""
authors = ["BorysMandryk <55620815+BorysMandryk@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
Flask = "^1.1.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
